force-app/main/default/objects/Krow__Proposal__c/Krow__Proposal__c.object-meta.xml
<CustomObject>
    <label>Proposal</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>