force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Budgeted_Cost2__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost2__c</fullName>
    <label>Budgeted Cost</label>
    <summarizedField>Krow__Proposal_Line__c.Krow__Budgeted_Cost__c</summarizedField>
    <summaryForeignKey>Krow__Proposal_Line__c.Krow__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>