force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost__c</fullName>
    <label>Deprecated</label>
    <summarizedField>Krow__Proposal_Line__c.Krow__Cost_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Proposal_Line__c.Krow__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>