force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Contract__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Krow__Contract__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>