force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <summarizedField>Krow__Proposal_Line__c.Krow__Proposed_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Proposal_Line__c.Krow__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>