force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Amount__c</fullName>
    <label>Margin Amount</label>
    <summarizedField>Krow__Proposal_Line__c.Krow__Margin_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Proposal_Line__c.Krow__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Proposal_Line__c.Krow__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>