force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Margin_Pct_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Pct_Proposal__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Expected_Revenue__c), IF(Krow__Expected_Revenue__c = 0, TRUE, FALSE)), 0, (Krow__Expected_Revenue__c - Krow__Budgeted_Cost__c ) / Krow__Expected_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>