force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent__c</fullName>
    <label>Target Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>