force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Krow__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>