force-app/main/default/objects/Krow__Proposal__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Krow__Account__c</field>
            <operation>equals</operation>
            <valueField>Krow__Project__c.Krow__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>