force-app/main/default/objects/Krow__Proposal__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Account__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Margin_Amount__c</columns>
    <columns>Krow__Margin_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>